--- a/style1.css
+++ b/style1.css
@@ -3,6 +3,17 @@
   padding:0;
   font-family:verdana;
 }
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+    background-color: #1B2631;
+  }
+}
 #abc{
   width:100%;
   height:100vh;
