--- a/style1.css
+++ b/style1.css
@@ -14,11 +14,13 @@
     background-color: #1B2631;
   }
 }
+body{
+background-image: url("background.png");
+}
 #abc{
   width:100%;
   height:100vh;
   background-image: url(background.png);
-  background-size: cover;
 }
 nav{
   width: 100%;
