--- a/style1.css
+++ b/style1.css
@@ -21,6 +21,7 @@ background-image: url("background.png");
   width:100%;
   height:100vh;
   background-image: url(background.png);
+  background-size: cover;
 }
 nav{
   width: 100%;
