--- a/style1.css
+++ b/style1.css
@@ -18,7 +18,7 @@
 #abc{
   width:100%;
   height:100vh;
-  background-image: url("background.png");
+  background-image: url(background.png);
   background-size: cover;
 }
 nav{
