--- a/style1.css
+++ b/style1.css
@@ -3,12 +3,11 @@
   padding:0;
   font-family:verdana;
 }
-
 #abc{
   width:100%;
   height:100vh;
-  background-image: url(background.png);
-  background-size: cover;
+  background-image: url(Background2.jpg);
+  background-size:cover;
 }
 nav{
   width: 100%;
@@ -32,4 +31,23 @@ nav ul li a{
   text-decoration: none;
   color: #fff;
   padding: 30px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: #273746;
 }
