--- a/style1.css
+++ b/style1.css
@@ -6,8 +6,12 @@
 #abc{
   width:100%;
   height:100vh;
-  background-image: url(Background2.jpg);
-  background-size:cover;
+  background-image: url(Background2.jpg); no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  
 }
 nav{
   width: 100%;
