--- a/style1.css
+++ b/style1.css
@@ -11,6 +11,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-position: center;
   
 }
 nav{
