--- a/style1.css
+++ b/style1.css
@@ -6,8 +6,9 @@
 #abc{
   width:100%;
   height:100vh;
-  background-image: url(Background2.jpg); 
+  background-image: url(background.jpg); 
   background-size: cover;
+  background-position: center;
   
 }
 nav{
