--- a/style1.css
+++ b/style1.css
@@ -6,9 +6,8 @@
 #abc{
   width:100%;
   height:100vh;
-  background-image: url(background.jpg); 
+  background-image: url(background.png); 
   background-size: cover;
-  background-position: center;
   
 }
 nav{
