--- a/style1.css
+++ b/style1.css
@@ -7,7 +7,7 @@
   width:100%;
   height:100vh;
   background-image: url(background.png); 
-  background-size: cover;
+  background-size: contain;
   
 }
 nav{
